--- a/sync-crm/src/app/login/login.component.html
+++ b/sync-crm/src/app/login/login.component.html
@@ -13,4 +13,10 @@
   </div>
 
   <button type="submit">Login</button>
+
+<p class="forgot-password">
+  <button (click)="navigateToForgotPassword()">Forgot Password?</button>
+</p>
+
 </form>
+
