--- a/sync-crm/src/app/dashboard/dashboard.component.html
+++ b/sync-crm/src/app/dashboard/dashboard.component.html
@@ -13,6 +13,8 @@
   <!-- Sidebar -->
 <aside class="sidebar">
     <h2>SYNC</h2>
+     <h4>-Functionalies SYNC offers -</h4>
+
     <ul>
         <li><a routerLink="/dashboard">Dashboard</a></li>
         <li><a routerLink="/leads">Leads</a></li> <!-- linked to LeadsComponent -->
@@ -28,7 +30,7 @@
 
         <!-- Quick Access Section -->
 <div class="quick-links">
-    <h3>Quick Access</h3>
+    <h3> Access</h3>
     <button (click)="navigateTo('leads')">View Leads</button>
     <button (click)="navigateTo('companies')">View Companies</button>
     <button (click)="navigateTo('contacts')">View Contacts</button> <!-- New Button -->
